--- a/index.html
+++ b/index.html
@@ -18,48 +18,49 @@
   </div>
   </div>
   <div class="team-members">
-    <figure>
-      <div>
+    <div class="team-mates">
+      <p class="title">Product owner</p>
+      <figure>
         <img src="images/photo1.png" alt="Bill Mahoney's portrait">
         <figcaption>Bill Mahoney</figcaption>
-      </div>
-      <p class="title">Product owner</p>
-    </figure>
-    <figure>
-      <div>
+      </figure>
+      
+    </div>
+    <div class="team-mates">
+      <p class="title">Art Director</p>
+      <figure>
         <img src="images/photo2.png" alt="Saba Cabrera's portrait">
         <figcaption>Saba Cabrera</figcaption>
-      </div> 
-      <p class="title">Art Director</p>
-    </figure>
-    <figure>
-      <div>
+      </figure>
+    </div>
+    <div class="team-mates">
+      <p class="title">Tech Lead</p>
+      <figure>
         <img src="images/photo3.png" alt="Shae Le's portrait">
         <figcaption>Shae Le</figcaption>
-      </div>
-      <p class="title">Tech Lead</p>
-    </figure>
-    <figure>
-      <div>
+      </figure>
+    </div>
+    <div class="team-mates">
+      <p class="title">UX Designer</p>
+      <figure>
         <img src="images/photo4.png" alt="Skylah Lu's portrait">
         <figcaption>Skylah Lu</figcaption>
-      </div>
-      <p class="title">UX Designer</p>
-    </figure>
-    <figure>
-      <div>
-        <img src="images/photo5.png" alt="Griff Richards's portrait">
-        <figcaption>Griff Richards</figcaption>
-      </div>
+      </figure>
+    </div>
+    <div class="team-mates">
       <p class="title">Developer</p>
-    </figure>
-    <figure>
-      <div>
+      <figure>
+          <img src="images/photo5.png" alt="Griff Richards's portrait">
+          <figcaption>Griff Richards</figcaption>
+      </figure>
+    </div>
+    <div class="team-mates">
+      <p class="title">DEverloper</p>
+      <figure>
         <img src="images/photo6.png" alt="Stan John's portrait">
         <figcaption>Stan John</figcaption>
-      </div>  
-      <p class="title">DEverloper</p>
-    </figure>
+      </figure>
+    </div>
   </div>
   <footer>
     <p>Njoku Nneka Sandra @ DevChallenges.io</p>
